--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, height=device-height, initial-scale=1" name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>After Words</title>
     <!--build:js js/main.min.js-->
     <script src="js/jquery.js"></script>
@@ -13,12 +14,17 @@
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
     <!-- endbuild -->
+
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.js"></script>
+    <![endif]-->
 </head>
 <body>
 <div class="container-fluid">
     <div class="col-md-4 hidden-sm"></div>
     <div class="col-md-4 col-sm-12">
-        <img src="images/AWcassetteVertical.png" style="width: 100%"/>
+        <img src="images/AWcassetteVertical.png" class="center-block title-img"/>
     </div>
     <div class="col-md-4 hidden-sm"></div>
 </div>
@@ -51,45 +57,33 @@
         <h2 class="text-center"><b>Contact Us</b></h2>
         <br>
         <form action="javascript:emailSubmit();">
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <label for="nameOrCompany">Name:</label>
-            </div>
-            <div class="col-md-9">
                 <input id="nameOrCompany" type="text" required>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <label for="emailAddress">Contact Email:</label>
-            </div>
-            <div class="col-md-9">
                 <input id="emailAddress" type="email" required>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <label for="clientAddress">Address:</label>
-            </div>
-            <div class="col-md-9">
                 <input id="clientAddress" type="text" required>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <label for="emailSubject">Subject:</label>
-            </div>
-            <div class="col-md-9">
                 <input id="emailSubject" type="text" required>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <label for="emailBody">Message:</label>
-            </div>
-            <div class="col-md-9">
                 <textarea id="emailBody" required></textarea>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-12">
                 <label for="attactmentUpload">Attachment:</label>
-            </div>
-            <div class="col-md-9">
                 <input id="attactmentUpload" type="file">
             </div>
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <input type="submit" class="text-center" id="submitEmail">
+            <br>
+            <div class="col-md-12">
+                <input type="submit" class="text-center" id="submitEmail" value="Send">
             </div>
         </form>
     </div>
