--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,6 @@
     <!-- endbuild -->
 
     <!--build:css css/styles.min.css-->
-    <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/main.css" rel="stylesheet"/>
     <!-- endbuild -->
 
@@ -82,6 +81,8 @@
                 <input id="attactmentUpload" type="file">
             </div>
             <br>
+            <div id="response" class="col-md-12 text-center" style="display: none"></div>
+            <br><br>
             <div class="col-md-12">
                 <input type="submit" class="text-center" id="submitEmail" value="Send">
             </div>
@@ -89,7 +90,8 @@
     </div>
     <div class="col-md-4 hidden-sm"></div>
 </div>
-<footer>
+<footer class="text-center">
+    <br>
     ©2016 After Words
 </footer>
 </body>
